Home page update

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -25,6 +25,19 @@ body {
 .x.axis path {
   display: none;
 }
+
+
+
+.graph-tooltip {
+  background: antiquewhite;
+  padding: 10px;
+  border: 1px solid #ABABAB;
+  border-radius: 3px;
+  font-size: 13px;
+}
+.graph-tooltip span {
+  display: block;
+}
 </style>
 
 <p>D3 charts  </p>
