--- a/app/views/home.html
+++ b/app/views/home.html
@@ -38,8 +38,24 @@ body {
 .graph-tooltip span {
   display: block;
 }
+.box {
+  margin-right: 15px;
+  background: #ccc;
+  float: left;
+  width:600px; 
+  height:400px
+}
 </style>
 
 <p>D3 charts  </p>
-<div id="chart"></div>
-<div id="chart2"></div>
+
+
+ <div class="box" id="chart1" >
+
+</div>
+
+
+<div class="box" id="chart2">
+
+</div> 
+
