--- a/app/views/home.html
+++ b/app/views/home.html
@@ -42,20 +42,31 @@ body {
   margin-right: 15px;
   background: #ccc;
   float: left;
-  width:600px; 
-  height:400px
+  width:960px; 
+  height:400px;
 }
 </style>
 
 <p>D3 charts  </p>
 
+<form>
+  <label><input type="radio" name="mode" value="grouped"> Grouped</label>
+  <label><input type="radio" name="mode" value="stacked" checked> Stacked</label>
+</form>
+<div class="box" id="chart1" >
 
- <div class="box" id="chart1" >
+
+
 
 </div>
 
 
-<div class="box" id="chart2">
+
+
+
+
+
+<!-- <div class="box" id="chart2">
 
 </div> 
-
+ -->
