--- a/app/views/home.html
+++ b/app/views/home.html
@@ -40,19 +40,22 @@ body {
 }
 .box {
   margin-right: 15px;
-  background: #ccc;
+  
   float: left;
   width:960px; 
   height:400px;
+}
+.legend {
+  background: red;
 }
 </style>
 
 <p>D3 charts  </p>
 
-<form>
+<!-- <form>
   <label><input type="radio" name="mode" value="grouped"> Grouped</label>
   <label><input type="radio" name="mode" value="stacked" checked> Stacked</label>
-</form>
+</form> -->
 <div class="box" id="chart1" >
 
 
